Area system (+more)
This commit is meant to backup the current state of the project, since a lot of work has been done on it; it does not represent the completion of a feature, or mean that the project is yet in a usuable state.
The following changes were made to the project:
1. **Most importantly**, created image map system - A JS algorithm which takes a list of bounding rectangles (in percentages) and creates <area> elements for them. See <script> in map.html.
2. Removed "header|footer" and "end of (header|footer)" comments
3. Minor code changes

--- a/common.css
+++ b/common.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100vw;
-    height: 100vh;
+    height: max-content;
     display: flex;
     align-items: start;
     overflow-x: hidden;
@@ -37,8 +37,8 @@ header > img {
     width: 100%;
     flex-grow: 1;
     background-image: url("images/map-blur.png");
-    background-color: #4f4b;
-    background-blend-mode: soft-light;
+    background-color: #afaa;
+    background-blend-mode: lighten;
     background-size: cover;
 }
 
