--- a/common.css
+++ b/common.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     width: 100vw;
-    height: max-content;
+    height: 100vh;
     display: flex;
     align-items: start;
     overflow-x: hidden;
