--- a/animals/style.css
+++ b/animals/style.css
@@ -7,7 +7,7 @@
     text-decoration: dotted underline 2px;
 }
 
-.has-extra > .extra-hidden {
+.extra-hidden {
     display: none;
 }
 
@@ -30,7 +30,7 @@ h1 {
 }
 
 #main-image {
-    width: 100%;
+    width: 50%;
     margin: 0 1% 1% 0;
     float: left;
 }
